--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
@@ -54,5 +55,8 @@
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "overrides": {
+  "react-is": "^19.0.0-rc-69d4b800-20241021"
+}
 }
